--- a/MetaLogic/Foundation.Data.Nat.html
+++ b/MetaLogic/Foundation.Data.Nat.html
@@ -4,11 +4,12 @@
 <a id="35" class="Keyword">open</a> <a id="40" class="Keyword">import</a> <a id="47" href="Foundation.Prelude.html" class="Module">Foundation.Prelude</a>
 
 <a id="67" class="Keyword">open</a> <a id="72" class="Keyword">import</a> <a id="79" href="Data.Nat.Base.html" class="Module">Data.Nat.Base</a> <a id="93" class="Keyword">public</a>
-  <a id="102" class="Keyword">using</a> <a id="108" class="Symbol">(</a><a id="109" href="Data.Nat.Base.html#3308" class="Primitive Operator">_∸_</a><a id="112" class="Symbol">)</a>
-  <a id="116" class="Keyword">renaming</a> <a id="125" class="Symbol">(</a><a id="126" href="Data.Nat.Base.html#4331" class="Function Operator">_⊔_</a> <a id="130" class="Symbol">to</a> <a id="133" class="Function Operator">max</a><a id="136" class="Symbol">)</a>
+  <a id="102" class="Keyword">using</a> <a id="108" class="Symbol">(</a><a id="109" href="Data.Nat.Base.html#3308" class="Primitive Operator">_∸_</a><a id="112" class="Symbol">;</a> <a id="114" href="Data.Nat.Base.html#1232" class="Primitive Operator">_≡ᵇ_</a><a id="118" class="Symbol">)</a>
+  <a id="122" class="Keyword">renaming</a> <a id="131" class="Symbol">(</a><a id="132" href="Data.Nat.Base.html#4331" class="Function Operator">_⊔_</a> <a id="136" class="Symbol">to</a> <a id="139" class="Function Operator">max</a><a id="142" class="Symbol">)</a>
 
-<a id="139" class="Keyword">open</a> <a id="144" class="Keyword">import</a> <a id="151" href="Data.Nat.Properties.html" class="Module">Data.Nat.Properties</a> <a id="171" class="Symbol">as</a> <a id="174" class="Module">ℕ</a> <a id="176" class="Keyword">public</a>
-  <a id="185" class="Keyword">using</a> <a id="191" class="Symbol">(</a>
-    <a id="197" href="Data.Nat.Properties.html#14663" class="Function">+-suc</a><a id="202" class="Symbol">;</a> <a id="204" href="Data.Nat.Properties.html#15204" class="Function">+-comm</a>
-  <a id="213" class="Symbol">)</a>
+<a id="145" class="Keyword">open</a> <a id="150" class="Keyword">import</a> <a id="157" href="Data.Nat.Properties.html" class="Module">Data.Nat.Properties</a> <a id="177" class="Symbol">as</a> <a id="180" class="Module">ℕ</a> <a id="182" class="Keyword">public</a>
+  <a id="191" class="Keyword">using</a> <a id="197" class="Symbol">(</a>
+    <a id="203" href="Data.Nat.Properties.html#3025" class="Function">≡ᵇ⇒≡</a><a id="207" class="Symbol">;</a> <a id="209" href="Data.Nat.Properties.html#3140" class="Function">≡⇒≡ᵇ</a><a id="213" class="Symbol">;</a>
+    <a id="219" href="Data.Nat.Properties.html#14663" class="Function">+-suc</a><a id="224" class="Symbol">;</a> <a id="226" href="Data.Nat.Properties.html#15204" class="Function">+-comm</a>
+  <a id="235" class="Symbol">)</a>
 </pre></body></html>
