--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -337,38 +337,41 @@ theorem_name = proof_term</code></pre>
 <p>列表 <code>𝕃 A</code> 是不定长有限类型. 不定长是指列表的类型签名中不储存长度信息, 有限是指列表的长度是个自然数. 当 <code>A</code> 是集合时, <code>𝕃 A</code> 也是集合 (<code>isSet𝕃</code>).</p>
 <p>我们可以问 <code>x : A</code> 在不在列表 <code>xs : 𝕃 A</code> 中, 这引入了列表的属于关系 <code>x ∈ᴸ xs</code> 以及一系列类比于集合论的概念. 我们把它们放在以下模块. 注意与幂集不同的是, <code>x ∈ᴸ xs</code> 不是命题, 因为 <code>x</code> 不保证在 <code>xs</code> 中只出现一次.</p>
 <pre class="Agda"><a id="11598" class="Keyword">open</a> <a id="11603" class="Keyword">import</a> <a id="11610" href="Foundation.Data.List.SetTheoretic.html" class="Module">Foundation.Data.List.SetTheoretic</a> <a id="11644" class="Keyword">public</a>
-  <a id="11653" class="Keyword">renaming</a> <a id="11662" class="Symbol">(</a><a id="11663" href="Data.List.Membership.Setoid.html#943" class="Function Operator">_∈_</a> <a id="11667" class="Symbol">to</a> <a id="11670" class="Function Operator">_∈ᴸ_</a><a id="11674" class="Symbol">;</a> <a id="11676" href="Data.List.Membership.Setoid.html#992" class="Function Operator">_∉_</a> <a id="11680" class="Symbol">to</a> <a id="11683" class="Function Operator">_∉ᴸ_</a><a id="11687" class="Symbol">;</a> <a id="11689" href="Data.List.Relation.Binary.Subset.Setoid.html#825" class="Function Operator">_⊆_</a> <a id="11693" class="Symbol">to</a> <a id="11696" class="Function Operator">_⊆ᴸ_</a><a id="11700" class="Symbol">)</a>
+  <a id="11653" class="Keyword">renaming</a> <a id="11662" class="Symbol">(</a>
+    <a id="11668" href="Data.List.Membership.Setoid.html#943" class="Function Operator">_∈_</a> <a id="11672" class="Symbol">to</a> <a id="11675" class="Function Operator">_∈ᴸ_</a><a id="11679" class="Symbol">;</a> <a id="11681" href="Data.List.Membership.Setoid.html#992" class="Function Operator">_∉_</a> <a id="11685" class="Symbol">to</a> <a id="11688" class="Function Operator">_∉ᴸ_</a><a id="11692" class="Symbol">;</a>
+    <a id="11698" href="Data.List.Relation.Binary.Subset.Setoid.html#825" class="Function Operator">_⊆_</a> <a id="11702" class="Symbol">to</a> <a id="11705" class="Function Operator">_⊆ᴸ_</a><a id="11709" class="Symbol">;</a> <a id="11711" href="Data.List.Relation.Binary.Subset.Setoid.html#930" class="Function Operator">_⊈_</a> <a id="11715" class="Symbol">to</a> <a id="11718" class="Function Operator">_⊈ᴸ_</a><a id="11722" class="Symbol">;</a>
+    <a id="11728" href="Data.List.Relation.Binary.Subset.Propositional.Properties.html#2369" class="Function">⊆-trans</a> <a id="11736" class="Symbol">to</a> <a id="11739" class="Function">⊆ᴸ-trans</a><a id="11747" class="Symbol">)</a>
 </pre>
 <p>我们甚至可以谈论 <code>A</code> 的列表与 <code>A</code> 的子集间的包含关系 <code>_ᴸ⊆ᴾ_</code>.</p>
-<pre class="Agda"><a id="11757" class="Keyword">open</a> <a id="11762" class="Keyword">import</a> <a id="11769" href="Foundation.Set.Powerset%252BList.html" class="Module">Foundation.Set.Powerset+List</a> <a id="11798" class="Keyword">public</a>
+<pre class="Agda"><a id="11804" class="Keyword">open</a> <a id="11809" class="Keyword">import</a> <a id="11816" href="Foundation.Set.Powerset%252BList.html" class="Module">Foundation.Set.Powerset+List</a> <a id="11845" class="Keyword">public</a>
 </pre>
 <h4 id="向量">向量</h4>
-<pre class="Agda"><a id="11827" class="Keyword">open</a> <a id="11832" class="Keyword">import</a> <a id="11839" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="11859" class="Keyword">public</a>
+<pre class="Agda"><a id="11874" class="Keyword">open</a> <a id="11879" class="Keyword">import</a> <a id="11886" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="11906" class="Keyword">public</a>
 </pre>
 <p>向量 <code>𝕍 A n</code> 是定长有限类型. 定长是指向量的类型签名中储存了长度信息 <code>n</code>. 当 <code>A</code> 是集合时, <code>𝕍 A n</code> 也是集合 (<code>isSet𝕍</code>).</p>
 <p>我们可以问 <code>x : A</code> 在不在向量 <code>x⃗ : 𝕍 A n</code> 中, 这引入了向量的属于关系 <code>x ∈⃗ x⃗</code> 以及一系列类比于集合论的概念. 我们把它们放在以下模块. 注意与幂集不同的是, <code>x ∈⃗ x⃗</code> 不是命题, 因为 <code>x</code> 不保证在 <code>x⃗</code> 中只出现一次.</p>
-<pre class="Agda"><a id="12102" class="Keyword">open</a> <a id="12107" class="Keyword">import</a> <a id="12114" href="Foundation.Data.Vec.SetTheoretic.html" class="Module">Foundation.Data.Vec.SetTheoretic</a> <a id="12147" class="Keyword">public</a>
-  <a id="12156" class="Keyword">renaming</a> <a id="12165" class="Symbol">(</a><a id="12166" href="Data.Vec.Membership.Setoid.html#930" class="Function Operator">_∈_</a> <a id="12170" class="Symbol">to</a> <a id="12173" class="Function Operator">_∈⃗_</a><a id="12177" class="Symbol">;</a> <a id="12179" href="Data.Vec.Membership.Setoid.html#988" class="Function Operator">_∉_</a> <a id="12183" class="Symbol">to</a> <a id="12186" class="Function Operator">_∉⃗_</a><a id="12190" class="Symbol">;</a> <a id="12192" href="Data.Vec.Relation.Unary.Any.html#1085" class="Datatype">Any</a> <a id="12196" class="Symbol">to</a> <a id="12199" class="Datatype">Any⃗</a><a id="12203" class="Symbol">)</a>
+<pre class="Agda"><a id="12149" class="Keyword">open</a> <a id="12154" class="Keyword">import</a> <a id="12161" href="Foundation.Data.Vec.SetTheoretic.html" class="Module">Foundation.Data.Vec.SetTheoretic</a> <a id="12194" class="Keyword">public</a>
+  <a id="12203" class="Keyword">renaming</a> <a id="12212" class="Symbol">(</a><a id="12213" href="Data.Vec.Membership.Setoid.html#930" class="Function Operator">_∈_</a> <a id="12217" class="Symbol">to</a> <a id="12220" class="Function Operator">_∈⃗_</a><a id="12224" class="Symbol">;</a> <a id="12226" href="Data.Vec.Membership.Setoid.html#988" class="Function Operator">_∉_</a> <a id="12230" class="Symbol">to</a> <a id="12233" class="Function Operator">_∉⃗_</a><a id="12237" class="Symbol">;</a> <a id="12239" href="Data.Vec.Relation.Unary.Any.html#1085" class="Datatype">Any</a> <a id="12243" class="Symbol">to</a> <a id="12246" class="Datatype">Any⃗</a><a id="12250" class="Symbol">)</a>
 </pre>
 <h2 id="函数-1">函数</h2>
 <p>函数 <code>A → B</code> 在我们的元语言里是原始概念. 以下列出一些关于函数的常用概念.</p>
 <h3 id="序列">序列</h3>
-<pre class="Agda"><a id="12277" class="Keyword">open</a> <a id="12282" class="Keyword">import</a> <a id="12289" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="12318" class="Keyword">public</a>
+<pre class="Agda"><a id="12324" class="Keyword">open</a> <a id="12329" class="Keyword">import</a> <a id="12336" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="12365" class="Keyword">public</a>
 </pre>
 <p>我们把函数 <code>ℕ → A</code> 称为无穷序列 <code>InfSeq</code>, 它有 “希尔伯特旅馆”操作 <code>_∷ₙ_</code>, 第一个参数是安排到0号房间的新客人, 第二个参数是原来的客房安排.</p>
 <h3 id="枚举">枚举</h3>
-<pre class="Agda"><a id="12434" class="Keyword">open</a> <a id="12439" class="Keyword">import</a> <a id="12446" href="Foundation.Function.Enumeration.ListView.Base.html" class="Module">Foundation.Function.Enumeration.ListView.Base</a> <a id="12492" class="Keyword">public</a>
-<a id="12499" class="Keyword">open</a> <a id="12504" class="Keyword">import</a> <a id="12511" href="Foundation.Function.Enumeration.ListView.Instance.html" class="Module">Foundation.Function.Enumeration.ListView.Instance</a> <a id="12561" class="Keyword">public</a>
-<a id="12568" class="Keyword">open</a> <a id="12573" class="Keyword">import</a> <a id="12580" href="Foundation.Function.Enumeration.ListView.Properties.html" class="Module">Foundation.Function.Enumeration.ListView.Properties</a> <a id="12632" class="Keyword">public</a>
+<pre class="Agda"><a id="12481" class="Keyword">open</a> <a id="12486" class="Keyword">import</a> <a id="12493" href="Foundation.Function.Enumeration.ListView.Base.html" class="Module">Foundation.Function.Enumeration.ListView.Base</a> <a id="12539" class="Keyword">public</a>
+<a id="12546" class="Keyword">open</a> <a id="12551" class="Keyword">import</a> <a id="12558" href="Foundation.Function.Enumeration.ListView.Instance.html" class="Module">Foundation.Function.Enumeration.ListView.Instance</a> <a id="12608" class="Keyword">public</a>
+<a id="12615" class="Keyword">open</a> <a id="12620" class="Keyword">import</a> <a id="12627" href="Foundation.Function.Enumeration.ListView.Properties.html" class="Module">Foundation.Function.Enumeration.ListView.Properties</a> <a id="12679" class="Keyword">public</a>
 </pre>
 <p>枚举是满足一定性质的特殊函数, 是关乎我们对象语言的重要构造, 其变体甚多, 我们单独设为一章: <a href="https://www.yuque.com/ocau/metalogic/foundation.enumeration.maybeview">0.2 枚举</a>.</p>
 <h3 id="同构">同构</h3>
-<pre class="Agda"><a id="12791" class="Keyword">open</a> <a id="12796" class="Keyword">import</a> <a id="12803" href="Foundation.Function.Isomorphism.html" class="Module">Foundation.Function.Isomorphism</a> <a id="12835" class="Keyword">public</a>
+<pre class="Agda"><a id="12838" class="Keyword">open</a> <a id="12843" class="Keyword">import</a> <a id="12850" href="Foundation.Function.Isomorphism.html" class="Module">Foundation.Function.Isomorphism</a> <a id="12882" class="Keyword">public</a>
 </pre>
 <p>同构 (<code>_≅_</code>) 是类型间的一对互逆的函数, 它构成了类型宇宙中的一种等价关系 (<code>idIso</code>, <code>invIso</code>, <code>compIso</code>).</p>
 <p><strong><u>定理</u> <code>univalence</code></strong> 当 <code>A</code> 是集合的时候, <code>A ≡ B</code> 与 <code>A ≅ B</code> 同构.</p>
 <h3 id="双射">双射</h3>
-<pre class="Agda"><a id="13002" class="Keyword">open</a> <a id="13007" class="Keyword">import</a> <a id="13014" href="Foundation.Function.Bijection.html" class="Module">Foundation.Function.Bijection</a> <a id="13044" class="Keyword">public</a>
+<pre class="Agda"><a id="13049" class="Keyword">open</a> <a id="13054" class="Keyword">import</a> <a id="13061" href="Foundation.Function.Bijection.html" class="Module">Foundation.Function.Bijection</a> <a id="13091" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong></p>
 <ul>
@@ -389,7 +392,7 @@ theorem_name = proof_term</code></pre>
 <h3 id="零元关系">零元关系</h3>
 <p>零元关系就是命题. 我们主要关心 <code>⊥</code> 这个命题, 并把它的衍生概念都放在零元关系 <code>Nullary</code> 模块中.</p>
 <h4 id="否定">否定</h4>
-<pre class="Agda"><a id="13614" class="Keyword">open</a> <a id="13619" class="Keyword">import</a> <a id="13626" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="13663" class="Keyword">public</a>
+<pre class="Agda"><a id="13661" class="Keyword">open</a> <a id="13666" class="Keyword">import</a> <a id="13673" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="13710" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> 否定的相关概念</p>
 <ul>
@@ -398,18 +401,18 @@ theorem_name = proof_term</code></pre>
 <li>稳定 <code>stable = λ A → nonEmpty A → A</code></li>
 </ul>
 <h4 id="可判定">可判定</h4>
-<pre class="Agda"><a id="13808" class="Keyword">open</a> <a id="13813" class="Keyword">import</a> <a id="13820" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="13858" class="Keyword">public</a>
+<pre class="Agda"><a id="13855" class="Keyword">open</a> <a id="13860" class="Keyword">import</a> <a id="13867" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="13905" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong> <code>A</code> 可判定, 记作 <code>Dec A</code>, 当且仅当 <code>A</code> 或 <code>¬ A</code>.</p>
 <p>如果 <code>A</code> 是一个命题, 那么其可判定性 <code>Dec A</code> 也是一个命题 (<code>isPredDec</code>).</p>
 <h4 id="离散性">离散性</h4>
-<pre class="Agda"><a id="13995" class="Keyword">open</a> <a id="14000" class="Keyword">import</a> <a id="14007" href="Foundation.Relation.Nullary.Discrete.Base.html" class="Module">Foundation.Relation.Nullary.Discrete.Base</a> <a id="14049" class="Keyword">public</a>
-<a id="14056" class="Keyword">open</a> <a id="14061" class="Keyword">import</a> <a id="14068" href="Foundation.Relation.Nullary.Discrete.Instance.html" class="Module">Foundation.Relation.Nullary.Discrete.Instance</a> <a id="14114" class="Keyword">public</a>
+<pre class="Agda"><a id="14042" class="Keyword">open</a> <a id="14047" class="Keyword">import</a> <a id="14054" href="Foundation.Relation.Nullary.Discrete.Base.html" class="Module">Foundation.Relation.Nullary.Discrete.Base</a> <a id="14096" class="Keyword">public</a>
+<a id="14103" class="Keyword">open</a> <a id="14108" class="Keyword">import</a> <a id="14115" href="Foundation.Relation.Nullary.Discrete.Instance.html" class="Module">Foundation.Relation.Nullary.Discrete.Instance</a> <a id="14161" class="Keyword">public</a>
 </pre>
 <p>离散性与枚举函数的性质密切相关, 与之一样, 我们单独设为一章: <a href="https://www.yuque.com/ocau/metalogic/foundation.discrete.base">0.1 离散性</a>.</p>
 <h3 id="一元关系">一元关系</h3>
 <h4 id="可数">可数</h4>
-<pre class="Agda"><a id="14261" class="Keyword">open</a> <a id="14266" class="Keyword">import</a> <a id="14273" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="14309" class="Keyword">public</a>
+<pre class="Agda"><a id="14308" class="Keyword">open</a> <a id="14313" class="Keyword">import</a> <a id="14320" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="14356" class="Keyword">public</a>
 </pre>
 <p><strong><u>定义</u></strong></p>
 <ul>
