--- a/MetaLogic/Foundation.Data.Bool.html
+++ b/MetaLogic/Foundation.Data.Bool.html
@@ -3,4 +3,5 @@
 
 <a id="36" class="Keyword">open</a> <a id="41" class="Keyword">import</a> <a id="48" href="Data.Bool.html" class="Module">Data.Bool</a> <a id="58" class="Keyword">public</a>
   <a id="67" class="Keyword">using</a> <a id="73" class="Symbol">(</a><a id="74" href="Data.Bool.Base.html#1292" class="Function Operator">if_then_else_</a><a id="87" class="Symbol">)</a>
+  <a id="91" class="Keyword">renaming</a> <a id="100" class="Symbol">(</a><a id="101" href="Data.Bool.Base.html#1460" class="Function">T</a> <a id="103" class="Symbol">to</a> <a id="106" class="Function">𝖳</a><a id="107" class="Symbol">)</a>
 </pre></body></html>
