--- a/agda-googology/Veblen.Infinitary.html
+++ b/agda-googology/Veblen.Infinitary.html
@@ -598,20 +598,19 @@
 <h2 id="总结">总结</h2>
 <p>现在我们可以总结后继元与极限元的规律了. 设 <span class="math inline">μ</span> 为任意极限序数, <span class="math inline">ν</span> 是下一个极限序数.</p>
 <ul>
-<li>极限阶段: <span class="math inline">μ^+</span> 元由 <span class="math inline">Φ_{μ}</span> 给出, 它是我们一直说的「梦的开始」, 其定义的特征是 <span class="math inline">\text{jump}_1</span> (一元除外)
+<li>极限阶段: <span class="math inline">Φ_{μ}</span> 给出了 <span class="math inline">μ^+</span> 元, 它们是「新的梦的开始」, 其定义的特征是 <span class="math inline">\text{jump}_1</span>
 <ul>
-<li>一元时是 <span class="math inline">λα,ω^α</span></li>
-<li><span class="math inline">ω^+</span> 元由 <span class="math inline">Φ_{ω}</span> 给出</li>
-<li><span class="math inline">(ω2)^+</span> 元由 <span class="math inline">Φ_{ω2}</span> 给出</li>
+<li><span class="math inline">Φ_{ω}</span> 给出了 <span class="math inline">ω^+</span> 元</li>
+<li><span class="math inline">Φ_{ω2}</span> 给出了 <span class="math inline">(ω2)^+</span> 元</li>
 <li>…</li>
 </ul></li>
-<li>后继阶段: <span class="math inline">μ^{++}</span> 元到 <span class="math inline">\lt ν</span> 元由 <span class="math inline">Φ_{\lt ν}</span> 给出, 其定义的特征是互递归
+<li>后继阶段: <span class="math inline">Φ_{\lt ν}</span> 给出了 <span class="math inline">μ^{++}</span> 元到 <span class="math inline">\lt ν</span> 元, 其定义的特征是互递归
 <ul>
-<li><span class="math inline">ω</span> 元由 <span class="math inline">Φ_{\lt ω}</span> 给出</li>
-<li><span class="math inline">ω2</span> 元由 <span class="math inline">Φ_{\lt ω2}</span> 给出</li>
+<li><span class="math inline">Φ_{\lt ω}</span> 给出了 <span class="math inline">ω</span> 元</li>
+<li><span class="math inline">Φ_{\lt ω2}</span> 给出了 <span class="math inline">ω2</span> 元</li>
 <li>…</li>
 </ul></li>
-<li>极限阶段: <span class="math inline">ν^{+}</span> 元由 <span class="math inline">Φ_{ν}</span> 给出</li>
+<li>极限阶段: <span class="math inline">Φ_{ν}</span> 给出了 <span class="math inline">ν^{+}</span> 元</li>
 <li>…</li>
 </ul>
 <p>下一篇将正式推广到任意序数元.</p>
