--- a/agda-googology/Lower.html
+++ b/agda-googology/Lower.html
@@ -234,7 +234,7 @@ C_{n^{++}}\kern{0.17em}a\kern{0.17em}b\kern{0.17em}...\kern{0.17em}c\kern{0.17em
 <ul>
 <li><span class="math inline">C_2</span> 就定义为乘方</li>
 <li><span class="math inline">C_3</span> 等价于 <span class="math inline">n</span> 个高德纳箭头</li>
-<li><span class="math inline">C_4</span> 大致相等于高德纳箭头塔</li>
+<li><span class="math inline">C_4</span> 大致相当于高德纳箭头塔</li>
 <li>…</li>
 </ul>
 <p>形式地</p>
