--- a/agda-googology/Lower.html
+++ b/agda-googology/Lower.html
@@ -241,7 +241,7 @@ C_{n^{++}}\kern{0.17em}a\kern{0.17em}b\kern{0.17em}...\kern{0.17em}c\kern{0.17em
 <p><strong>定义</strong></p>
 <p><span class="math display">
 \begin{aligned}
-C_2\kern{0.17em}m\kern{0.17em}n &amp;:= m^n \\
+C_2\kern{0.17em}b\kern{0.17em}c &amp;:= b^c \\
 \end{aligned}
 </span></p>
 <pre class="Agda"><a id="C₂"></a><a id="4593" href="Lower.html#4593" class="Function">C₂</a> <a id="4596" class="Symbol">:</a> <a id="4598" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a> <a id="4600" class="Symbol">→</a> <a id="4602" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a> <a id="4604" class="Symbol">→</a> <a id="4606" href="Agda.Builtin.Nat.html#203" class="Datatype">ℕ</a>
