--- a/agda-googology/Algebra.Definitions.RawSemiring.html
+++ b/agda-googology/Algebra.Definitions.RawSemiring.html
@@ -30,7 +30,7 @@
 <a id="859" class="Comment">------------------------------------------------------------------------</a>
 <a id="932" class="Comment">-- Definitions over _*_</a>
 
-<a id="957" class="Keyword">open</a> <a id="962" class="Keyword">import</a> <a id="969" href="Algebra.Definitions.RawMonoid.html" class="Module">Algebra.Definitions.RawMonoid</a> <a id="999" href="Algebra.Bundles.Raw.html#3413" class="Function">*-rawMonoid</a> as <a id="Mult"></a><a id="1014" href="Algebra.Definitions.RawSemiring.html#1014" class="Module">Mult</a> <a id="1019" class="Keyword">public</a>
+<a id="957" class="Keyword">open</a> <a id="962" class="Keyword">import</a> <a id="969" href="Algebra.Definitions.RawMonoid.html" class="Module">Algebra.Definitions.RawMonoid</a> <a id="999" href="Algebra.Bundles.Raw.html#3413" class="Function">*-rawMonoid</a> <a id="1011" class="Symbol">as</a> <a id="Mult"></a><a id="1014" href="Algebra.Definitions.RawSemiring.html#1014" class="Module">Mult</a> <a id="1019" class="Keyword">public</a>
   <a id="1028" class="Keyword">using</a>
   <a id="1036" class="Symbol">(</a> <a id="1038" href="Algebra.Definitions.RawMagma.html#1852" class="Function Operator">_∣_</a>
   <a id="1044" class="Symbol">;</a> <a id="1046" href="Algebra.Definitions.RawMagma.html#1884" class="Function Operator">_∤_</a>
