--- a/agda-googology/Algebra.Construct.NaturalChoice.Max.html
+++ b/agda-googology/Algebra.Construct.NaturalChoice.Max.html
@@ -23,7 +23,7 @@
 <a id="691" class="Comment">------------------------------------------------------------------------</a>
 <a id="764" class="Comment">-- Max is just min with a flipped order</a>
 
-<a id="805" class="Keyword">import</a> <a id="812" href="Algebra.Construct.NaturalChoice.Min.html" class="Module">Algebra.Construct.NaturalChoice.Min</a> <a id="848" class="Symbol">(</a><a id="849" href="Algebra.Construct.NaturalChoice.Max.html#632" class="Function">flip</a> <a id="854" href="Algebra.Construct.NaturalChoice.Max.html#399" class="Bound">totalOrder</a><a id="864" class="Symbol">)</a> as <a id="Min"></a><a id="869" href="Algebra.Construct.NaturalChoice.Max.html#869" class="Module">Min</a>
+<a id="805" class="Keyword">import</a> <a id="812" href="Algebra.Construct.NaturalChoice.Min.html" class="Module">Algebra.Construct.NaturalChoice.Min</a> <a id="848" class="Symbol">(</a><a id="849" href="Algebra.Construct.NaturalChoice.Max.html#632" class="Function">flip</a> <a id="854" href="Algebra.Construct.NaturalChoice.Max.html#399" class="Bound">totalOrder</a><a id="864" class="Symbol">)</a> <a id="866" class="Symbol">as</a> <a id="Min"></a><a id="869" href="Algebra.Construct.NaturalChoice.Max.html#869" class="Module">Min</a>
 
 <a id="874" class="Keyword">infixl</a> <a id="881" class="Number">6</a> <a id="883" href="Algebra.Construct.NaturalChoice.Max.html#888" class="Function Operator">_⊔_</a>
 
