--- a/agda-googology/Relation.Binary.Reasoning.Setoid.html
+++ b/agda-googology/Relation.Binary.Reasoning.Setoid.html
@@ -29,7 +29,7 @@
 <a id="786" class="Keyword">open</a> <a id="791" href="Relation.Binary.Bundles.html#1080" class="Module">Setoid</a> <a id="798" href="Relation.Binary.Reasoning.Setoid.html#761" class="Bound">S</a>
 
 <a id="801" class="Keyword">import</a> <a id="808" href="Relation.Binary.Reasoning.Base.Single.html" class="Module">Relation.Binary.Reasoning.Base.Single</a> <a id="846" href="Relation.Binary.Bundles.html#1169" class="Field Operator">_≈_</a> <a id="850" href="Relation.Binary.Structures.html#1596" class="Function">refl</a> <a id="855" href="Relation.Binary.Structures.html#1226" class="Function">trans</a>
-  as <a id="SingleRelReasoning"></a><a id="866" href="Relation.Binary.Reasoning.Setoid.html#866" class="Module">SingleRelReasoning</a>
+  <a id="863" class="Symbol">as</a> <a id="SingleRelReasoning"></a><a id="866" href="Relation.Binary.Reasoning.Setoid.html#866" class="Module">SingleRelReasoning</a>
 
 <a id="886" class="Comment">------------------------------------------------------------------------</a>
 <a id="959" class="Comment">-- Reasoning combinators</a>
