--- a/agda-googology/WellFormed.Base.html
+++ b/agda-googology/WellFormed.Base.html
@@ -749,6 +749,7 @@
 <a id="28485" class="Symbol">...</a> <a id="28489" class="Symbol">|</a> <a id="28491" href="Relation.Binary.Definitions.html#3212" class="InductiveConstructor">tri&gt;</a> <a id="28496" href="WellFormed.Base.html#28496" class="Bound">¬t</a> <a id="28499" href="WellFormed.Base.html#28499" class="Bound">¬u</a> <a id="28502" href="WellFormed.Base.html#28502" class="Bound">v</a> <a id="28504" class="Symbol">=</a> <a id="28506" href="Relation.Binary.Definitions.html#3212" class="InductiveConstructor">tri&gt;</a> <a id="28511" class="Symbol">(</a><a id="28512" href="WellFormed.Base.html#28496" class="Bound">¬t</a> <a id="28515" href="Function.Base.html#1115" class="Function Operator">∘</a> <a id="28517" href="Cubical.HITs.PropositionalTruncation.Base.html#288" class="InductiveConstructor Operator">∣_∣₁</a><a id="28521" class="Symbol">)</a> <a id="28523" href="WellFormed.Base.html#28499" class="Bound">¬u</a>  <a id="28527" class="Symbol">(</a><a id="28528" href="WellFormed.Base.html#25634" class="Function">set</a> <a id="28532" href="WellFormed.Base.html#28502" class="Bound">v</a><a id="28533" class="Symbol">)</a>
 </pre>
 <p><strong>结论 2-0-50</strong> 忽略非同株序数 (up to homo), 路径关系 <span class="math inline">\text{Rd}</span> (作为集合) 和子树关系 <span class="math inline">\lt</span> (作为命题) 分别构成了序数集 <span class="math inline">\text{Ord}</span> 上的良序.</p>
+<p><strong>约定 2-0-51</strong> 鉴于路径关系与子树关系的高度可互换性, 我们今后可能只会构造/证明其中一种, 读者应该理解其另一种也隐式地立即得到了.</p>
 </main>
 
 <script>
